[project]
name = "bpp1d"
version = "0.0.0"
authors = [
    { name = "Zhang Huayan", email = "huayan.zhang@nottingham.edu.cn"}
]
description="1D BPP solution"
requires-python = ">=3.8"
keywords = [
"bin packing"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "gymnasium"
]


[tool.ruff]
line-length = 120

[tool.ruff.pydocstyle]
convention = "numpy"

# if you want to just import in __init__.py
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]
[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "scipy.*"
]
ignore_missing_imports = true

[tool.poetry]
name = "bpp1d"
version = "0.0.1"
description = "A solution set of 1d online stochastic bin packing"
authors = ["Huayan Zhang <huayan.zhang@nottingham.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.0"
scipy = "^1.11.1"
gymnasium = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.275"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
