[project]
name = "bpp1d"
version = "0.1.0"
authors = [
    { name = "Zhang Huayan", email = "huayan.zhang@nottingham.edu.cn"}
]
description="1D BPP solution"
requires-python = ">=3.8"
keywords = [
"bin packing"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "gymnasium"
]


[tool.ruff]
line-length = 120

[tool.ruff.pydocstyle]
convention = "numpy"

# if you want to just import in __init__.py
# [tool.ruff.per-file-ignores]
# "__init__.py" = ["E402"]
[tool.mypy]
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "pulp.*",
    "pulp2mat",
    "bpp3d_dataset.*",
    "tianshou.*"
]
ignore_missing_imports = true

[tool.poetry]
name = "bpp1d"
version = "0.1.0"
description = "A solution set of 1d online stochastic bin packing"
authors = ["Huayan Zhang <huayan.zhang@nottingham.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
conda-lock = "^2.1.0"
torch = "2.0.1"
# gymnasium = "^0.28.1"
# pulp = "^2.7.0"
# pulp2mat = "0.1.3"
# tianshou = "^0.5.0"
numpy = "1.24.4"
scipy = "1.11.1"
tianshou = "0.5.0"
# gymnasium = "^0.28.1"
# pulp = "^2.7.0"
# bpp3d-dataset = ">=0.0.8"
gymnasium = "^0.28.1"
pulp = "^2.7.0"
bpp3d-dataset = "0.2.7"
typer = "^0.9.0"
commentjson = "^0.9.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]

pytest = "^7.4.0"
mypy = "^1.4.1"
ruff = "^0.0.275"
tox = "^4.6.4"
tox-current-env = "^0.0.11"




# [tool.poetry.group.torch_cpu]
# optional = true

# [tool.poetry.group.torch_cpu.dependencies]
# torch = { version = "2.0.1", source="torch_cpu" }

# [tool.poetry.group.torch_cuda]
# optional = true

# [tool.poetry.group.torch_cuda.dependencies]
# torch = { version = "2.0.1" }


[[tool.poetry.source]]
name = "vertices"
url = "https://git.vertices.tech/api/v4/groups/61/-/packages/pypi/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


# [[tool.poetry.source]]
# name = "torch_cpu"
# url = "https://download.pytorch.org/whl/cpu"
# priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
